--- a/src/components/styles/ResidentCard.css
+++ b/src/components/styles/ResidentCard.css
@@ -1,16 +1,20 @@
 .resident{
-    width: 100%;
+    width: 250px;
     max-width: 300px;
-    border-radius: 0.8em;
+    border-radius: 20px;
     overflow: hidden;
     background-color: #062226;
     color: white;
     transition: transform 100ms ease, box-shadow 100ms ease;
+ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .resident:hover{
     transform: scale(1.03);
-    box-shadow: 0 0 2em #0008;
+    box-shadow: 0 0 2em #7CBA24;
 }
 
 .resident_header{
